--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
         "psr-4": {
             "Andaniel05\\GluePHP\\": "src/",
             "Andaniel05\\GluePHP\\Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
     "repositories": [
         {
