--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "andaniel05/composed-views": "dev-master"
+        "andaniel05/composed-views": "dev-temp"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
