Añadida la licencia

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "andaniel05/glue-php",
+    "license": "MIT",
     "authors": [
         {
             "name": "Andy D. Navarro Taño",
