--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "andaniel05/composed-views": "dev-temp"
+        "andaniel05/composed-views": "dev-temp",
+        "matthiasmullie/minify": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
