--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "andaniel05/composed-views": "dev-master",
+        "andaniel05/composed-views": "dev-0.1a",
         "matthiasmullie/minify": "^1.3"
     },
     "require-dev": {
@@ -25,14 +25,5 @@
         "files": [
             "src/functions.php"
         ]
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://localhost/satis/andaniel05/"
-        }
-    ],
-    "config": {
-        "secure-http": false
     }
 }
